[project]
name = "weflush"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.5.2",
    "diffusers>=0.32.2",
    "peft>=0.14.0",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
